# jira-commit-msg

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lockdelta.yml  python-package.yml
src/: jira_commit_msg.py
src/jira_commit_msg/: __init__.py
test/: test_commit_jira_issue.py
test/commit-files/: commit-msg-with-issue-cc.txt  commit-msg-with-issue.txt  commit-msg-without-issue-cc.txt  commit-msg-without-issue.txt
