[tool.poetry]
name = "jira-commit-msg"
version = "0.1.0"
description = "A pre-commit compliant hook to add JIRA ticket data to commit msg"
authors = ["Louis-Amaury Chaib <louisamaury.chaib@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "*.py", from = "src"}]

[tool.poetry.scripts]
jira-commit-msg = "jira_commit_msg:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.16.0"
typing-extensions = "^4.14.0"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.16.1"
ruff = "^0.12.1"
black = "^25.1.0"
pytest-coverage = "^0.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = [
    "."
]

[tool.coverage.paths]
sources = ["src/"]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 100
skip_empty = true
skip_covered = true

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
